# gpui-binder

./: Cargo.toml  FILES-BY-DATE-ZED.md  README-gpui-component.md  README-gpui-component.zh-CN.md  README-zed.md  README.md
.github/workflows/: bind-gpui-component.yaml  bulk-delete.yaml  check-cargo-local-dependencies.yaml  combined-workflow.yaml  fork-gpui.yaml  generated-nightly.yaml
crates/gpui/: Cargo.toml
crates/gpui_component/: Cargo.toml
crates/gpui_component/src/: styled.rs
crates/gpui_component_assets/: Cargo.toml
crates/gpui_component_assets/src/: lib.rs
crates/gpui_component_macros/: Cargo.toml
crates/gpui_component_story/: Cargo.toml
crates/gpui_component_story/examples/: brush.rs  dock.rs  editor.rs  html.rs  large-text.rs  markdown.rs  stream_markdown.rs  tiles.rs
crates/gpui_component_story/src/: lib.rs  main.rs
crates/gpui_component_story/src/stories/: dialog_story.rs  welcome_story.rs
crates/gpui_component_story_web/: Cargo.toml
crates/gpui_component_story_web/src/: lib.rs
crates/gpui_facade/: Cargo.toml  README.md
crates/gpui_facade/src/: lib.rs
crates/gpui_linux/: Cargo.toml
crates/gpui_web/: Cargo.toml
crates/gpui_wgpu/: Cargo.toml
