[workspace]
exclude = [
    "crates/acp_thread",
    "crates/acp_tools",
    "crates/action_log",
    "crates/activity_indicator",
    "crates/agent",
    "crates/agent_servers",
    "crates/agent_settings",
    "crates/agent_skills",
    "crates/agent_ui",
    "crates/ai_onboarding",
    "crates/anthropic",
    "crates/askpass",
    "crates/assets",
    "crates/audio",
    "crates/auto_update",
    "crates/auto_update_helper",
    "crates/auto_update_ui",
    "crates/aws_http_client",
    "crates/bedrock",
    "crates/benchmarks",
    "crates/breadcrumbs",
    "crates/buffer_diff",
    "crates/call",
    "crates/channel",
    "crates/cli",
    "crates/client",
    "crates/clock",
    "crates/cloud_api_client",
    "crates/cloud_api_types",
    "crates/cloud_llm_client",
    "crates/codestral",
    "crates/collab",
    "crates/collab_ui",
    "crates/command_palette",
    "crates/command_palette_hooks",
    "crates/component",
    "crates/component_preview",
    "crates/context_server",
    "crates/copilot",
    "crates/copilot_chat",
    "crates/crashes",
    "crates/credentials_provider",
    "crates/csv_preview",
    "crates/dap",
    "crates/dap_adapters",
    "crates/db",
    "crates/debug_adapter_extension",
    "crates/debugger_tools",
    "crates/debugger_ui",
    "crates/deepseek",
    "crates/dev_container",
    "crates/diagnostics",
    "crates/docs_preprocessor",
    "crates/edit_prediction",
    "crates/edit_prediction_cli",
    "crates/edit_prediction_context",
    "crates/edit_prediction_metrics",
    "crates/edit_prediction_types",
    "crates/edit_prediction_ui",
    "crates/editor",
    "crates/editor_benchmarks",
    "crates/encoding_selector",
    "crates/env_var",
    "crates/etw_tracing",
    "crates/eval_cli",
    "crates/eval_utils",
    "crates/explorer_command_injector",
    "crates/extension",
    "crates/extension_api",
    "crates/extension_cli",
    "crates/extension_host",
    "crates/extensions_ui",
    "crates/feature_flags",
    "crates/feature_flags_macros",
    "crates/feedback",
    "crates/file_finder",
    "crates/file_icons",
    "crates/fs",
    "crates/fs_benchmarks",
    "crates/fuzzy",
    "crates/fuzzy_nucleo",
    "crates/git",
    "crates/git_hosting_providers",
    "crates/git_ui",
    "crates/go_to_line",
    "crates/google_ai",
    "crates/grammars",
    "crates/html_to_markdown",
    "crates/http_proxy",
    "crates/icons",
    "crates/image_viewer",
    "crates/input_latency_ui",
    "crates/inspector_ui",
    "crates/install_cli",
    "crates/journal",
    "crates/json_schema_store",
    "crates/keymap_editor",
    "crates/language",
    "crates/language_core",
    "crates/language_extension",
    "crates/language_model",
    "crates/language_model_core",
    "crates/language_models",
    "crates/language_models_cloud",
    "crates/language_onboarding",
    "crates/language_selector",
    "crates/language_tools",
    "crates/languages",
    "crates/line_ending_selector",
    "crates/livekit_api",
    "crates/livekit_client",
    "crates/lmstudio",
    "crates/lsp",
    "crates/markdown",
    "crates/markdown_preview",
    "crates/menu",
    "crates/mermaid_render",
    "crates/migrator",
    "crates/miniprofiler_ui",
    "crates/mistral",
    "crates/multi_buffer",
    "crates/net",
    "crates/node_runtime",
    "crates/notifications",
    "crates/oauth_callback_server",
    "crates/ollama",
    "crates/onboarding",
    "crates/open_ai",
    "crates/open_path_prompt",
    "crates/open_router",
    "crates/opencode",
    "crates/outline",
    "crates/outline_panel",
    "crates/panel",
    "crates/paths",
    "crates/picker",
    "crates/platform_title_bar",
    "crates/prettier",
    "crates/project",
    "crates/project_benchmarks",
    "crates/project_panel",
    "crates/project_symbols",
    "crates/prompt_store",
    "crates/proto",
    "crates/recent_projects",
    "crates/release_channel",
    "crates/remote",
    "crates/remote_connection",
    "crates/remote_server",
    "crates/repl",
    "crates/rope",
    "crates/rpc",
    "crates/sandbox",
    "crates/schema_generator",
    "crates/search",
    "crates/session",
    "crates/settings",
    "crates/settings_content",
    "crates/settings_json",
    "crates/settings_macros",
    "crates/settings_profile_selector",
    "crates/settings_ui",
    "crates/shell_command_parser",
    "crates/sidebar",
    "crates/snippet",
    "crates/snippet_provider",
    "crates/snippets_ui",
    "crates/sqlez",
    "crates/sqlez_macros",
    "crates/streaming_diff",
    "crates/svg_preview",
    "crates/syntax_theme",
    "crates/system_specs",
    "crates/tab_switcher",
    "crates/task",
    "crates/tasks_ui",
    "crates/telemetry",
    "crates/telemetry_events",
    "crates/terminal",
    "crates/terminal_view",
    "crates/text",
    "crates/theme",
    "crates/theme_extension",
    "crates/theme_importer",
    "crates/theme_selector",
    "crates/theme_settings",
    "crates/time_format",
    "crates/title_bar",
    "crates/toolchain_selector",
    "crates/ui",
    "crates/ui_input",
    "crates/ui_macros",
    "crates/ui_prompt",
    "crates/vim",
    "crates/vim_mode_setting",
    "crates/watch",
    "crates/web_search",
    "crates/web_search_providers",
    "crates/which_key",
    "crates/windows_resources",
    "crates/workspace",
    "crates/worktree",
    "crates/worktree_benchmarks",
    "crates/x_ai",
    "crates/zed",
    "crates/zed_actions",
    "crates/zed_credentials_provider",
    "crates/zed_env_vars",
    "crates/zeta_prompt",
    "crates/zlog_settings",
    "extensions/glsl",
    "extensions/html",
    "extensions/proto",
    "extensions/test-extension",
    "tooling/compliance",
    "tooling/xtask",
]

resolver = "2"
members = [
    "crates/collections",
    "crates/gpui",
    "crates/gpui_shared_string",
    "crates/gpui_linux",
    "crates/gpui_macos",
    "crates/gpui_macros",
    "crates/gpui_platform",
    "crates/gpui_tokio",
    "crates/gpui_util",
    "crates/gpui_web",
    "crates/gpui_wgpu",
    "crates/gpui_windows",
    "crates/http_client",
    "crates/http_client_tls",
    "crates/media",
    "crates/refineable",
    "crates/refineable/derive_refineable",
    "crates/reqwest_client",
    "crates/scheduler",
    "crates/sum_tree",
    "crates/util",
    "crates/util_macros",
    "crates/zlog",
    "crates/ztracing",
    "crates/ztracing_macro",
    "tooling/perf",
    "crates/gpui_facade",
    "crates/gpui_component",
    "crates/gpui_component_assets",
    "crates/gpui_component_macros",
    "crates/gpui_component_story",
    "crates/gpui_component_story_web",
]
default-members = [
    "crates/gpui_facade",
    "crates/gpui_component",
    "crates/gpui_component_assets",
    "crates/gpui_component_macros",
    "crates/gpui_component_story",
    "crates/gpui_component_story_web",
]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]

#
# Workspace member crates
#

collections = { path = "crates/collections", version = "0.1.0" }
component = { path = "crates/component" }
derive_refineable = { path = "crates/refineable/derive_refineable" }
gpui = { path = "crates/gpui", default-features = false }
gpui_shared_string = { path = "crates/gpui_shared_string" }
gpui_linux = { path = "crates/gpui_linux", default-features = false }
gpui_macos = { path = "crates/gpui_macos", default-features = false }
gpui_macros = { path = "crates/gpui_macros" }
gpui_platform = { path = "crates/gpui_platform", default-features = false }
gpui_web = { path = "crates/gpui_web" }
gpui_wgpu = { path = "crates/gpui_wgpu" }
gpui_windows = { path = "crates/gpui_windows", default-features = false }
gpui_util = { path = "crates/gpui_util" }
http_client = { path = "crates/http_client" }
http_client_tls = { path = "crates/http_client_tls" }
media = { path = "crates/media" }
perf = { path = "tooling/perf" }
refineable = { path = "crates/refineable" }
reqwest_client = { path = "crates/reqwest_client" }
scheduler = { path = "crates/scheduler" }
sum_tree = { path = "crates/sum_tree" }
util = { path = "crates/util" }
util_macros = { path = "crates/util_macros" }

zlog = { path = "crates/zlog" }
ztracing = { path = "crates/ztracing" }
ztracing_macro = { path = "crates/ztracing_macro" }

#
# External crates
#

accesskit = "0.24.0"
accesskit_macos = "0.26.0"
accesskit_unix = "0.21.0"
accesskit_windows = "0.33.1"
aho-corasick = "1.1.3"
anyhow = "1.0.86"
ashpd = { version = "0.13", default-features = false, features = [
    "async-io",
    "notification",
    "open_uri",
    "file_chooser",
    "settings",
    "trash"
] }
async-channel = "2.5.0"
async-compression = { version = "0.4", features = ["bzip2", "gzip", "futures-io"] }
async-fs = "2.1"
async-tar = "0.5.1"
async-task = "4.7"
async_zip = { version = "0.0.18", features = ["deflate", "deflate64"] }
backtrace = "0.3"
bitflags = "2.6.0"
bytes = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
cocoa = "=0.26.0"
core-foundation = "=0.10.0"
core-foundation-sys = "0.8.6"
core-video = { version = "0.5.2", features = ["metal"] }
criterion = { version = "0.5", features = ["html_reports"] }
ctor = "1.0.6"
derive_more = { version = "2.1.1", features = [
    "add",
    "add_assign",
    "deref",
    "deref_mut",
    "display",
    "from_str",
    "mul",
    "mul_assign",
    "not",
] }
dirs = "6.0"
documented = "0.9.1"
dunce = "1.0"
env_logger = "0.11"
futures = "0.3.32"
futures-concurrency = "7.7.1"
futures-lite = "1.13"

globset = "0.4"
heapless = "0.9.2"
heck = "0.5"
hdrhistogram = "7"
html5ever = "0.27.0"
http = "1.1"
http-body = "1.0"
image = "0.25.1"
indexmap = { version = "2.7.0", features = ["serde"] }
indoc = "2"
inventory = "0.3.19"
itertools = "0.14.0"
libc = "0.2"
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
mach2 = "0.5"
markup5ever_rcdom = "0.3.0"
metal = "0.33"
nix = "0.29"
objc = "0.2"
objc2 = "0.6"
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "NSButton",
    "NSControl",
    "NSGraphics",
    "NSResponder",
    "NSView",
    "NSWindow",
    "objc2-core-foundation",
] }
objc2-foundation = { version = "=0.3.2", default-features = false, features = [
    "NSArray",
    "NSAttributedString",
    "NSBundle",
    "NSCoder",
    "NSData",
    "NSDate",
    "NSDictionary",
    "NSEnumerator",
    "NSError",
    "NSGeometry",
    "NSNotification",
    "NSNull",
    "NSObjCRuntime",
    "NSObject",
    "NSProcessInfo",
    "NSRange",
    "NSRunLoop",
    "NSString",
    "NSURL",
    "NSUndoManager",
    "NSValue",
    "objc2-core-foundation",
    "std",
] }
parking_lot = "0.12.1"
percent-encoding = "2.3.2"
postage = { version = "0.5", features = ["futures-traits"] }
pretty_assertions = { version = "1.3.0", features = ["unstable"] }
proc-macro2 = "1.0.93"
profiling = "1"
# replace this with main when #635 is merged
proptest = { git = "https://github.com/proptest-rs/proptest", rev = "3dca198a8fef1b32e3a66f1e1897c955b4dc5b5b", features = ["attr-macro"] }
pollster = "0.4.0"
quote = "1.0.9"
rand = "0.9"
rayon = "1.8"
regex = "1.5"
# WARNING: If you change this, you must also publish a new version of zed-reqwest to crates.io
reqwest = { git = "https://github.com/zed-industries/reqwest.git", rev = "c15662463bda39148ba154100dd44d3fba5873a4", default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "multipart",
    "rustls-tls-native-roots",
    "socks",
    "stream",
], package = "zed-reqwest", version = "0.12.15-zed" }
resvg = { version = "0.46.0", default-features = false, features = [
    "text",
    "system-fonts",
    "memmap-fonts",
    "raster-images",
] }
rust-embed = { version = "8.11", features = ["include-exclude"] }
rustc-hash = "2.1.0"
rustls = { version = "0.23.26" }
rustls-platform-verifier = "0.5.0"
# WARNING: If you change this, you must also publish a new version of zed-scap to crates.io
scap = { git = "https://github.com/zed-industries/scap", rev = "4afea48c3b002197176fb19cd0f9b180dd36eaac", default-features = false, package = "zed-scap", version = "0.0.8-zed" }
schemars = { version = "1.0", features = ["indexmap2"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0.221", features = ["derive", "rc"] }
serde_json = { version = "1.0.144", features = ["preserve_order", "raw_value"] }
serde_json_lenient = { version = "0.2", features = [
    "preserve_order",
    "raw_value",
] }
serde_urlencoded = "0.7"
sha2 = "0.10"
shlex = "1.3.0"
slotmap = "1.0.6"
smallvec = { version = "1.6", features = ["union", "const_new"] }
smol = "2.0"
stacksafe = "0.1"
strum = { version = "0.27.2", features = ["derive"] }
syn = { version = "2.0.101", features = ["full", "extra-traits", "visit-mut"] }
take-until = "0.2.0"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1" }
tree-sitter = { version = "0.26.9", features = ["wasm"] }
tree-sitter-c = "0.24.1"
tree-sitter-css = "0.23.2"
tree-sitter-diff = "0.1.0"
tree-sitter-elixir = "0.3"
tree-sitter-embedded-template = "0.23.0"
tree-sitter-html = "0.23.2"
tree-sitter-jsdoc = "0.23.2"
tree-sitter-json = "0.24.8"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.2"
tracing = "0.1.41"
unicase = "2.6"
unicode-segmentation = "1.12.0"
unindent = "0.2.3"
url = "2.2"
usvg = { version = "0.46.0", default-features = false }
uuid = { version = "1.10", features = ["v4", "v5", "v7", "serde"] }
walkdir = "2.5"
which = "6.0.0"
wasm-bindgen = "0.2.120"
web-time = "1.1.0"
wgpu = { git = "https://github.com/zed-industries/wgpu.git", rev = "357a0c56e0070480ad9daea5d2eaa83150b79e88" }
windows-core = "0.61"
gpui-component = { path = "crates/gpui_component" }
gpui-component-assets = { path = "crates/gpui_component_assets" }
gpui-component-macros = { path = "crates/gpui_component_macros" }


[workspace.dependencies.windows]
version = "0.61"
features = [
    "Foundation_Numerics",
    "Globalization_DateTimeFormatting",
    "Storage_Search",
    "Storage_Streams",
    "System_Threading",
    "UI_ViewManagement",
    "Wdk_System_SystemServices",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_DirectManipulation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Hlsl",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Security_Credentials",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_DataExchange",
    "Win32_System_IO",
    "Win32_System_JobObjects",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Performance",
    "Win32_System_Pipes",
    "Win32_System_RestartManager",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_System_WinRT",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_Ime",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Pointer",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media",
]

[patch.crates-io]
async-process = { git = "https://github.com/zed-industries/async-process.git", rev = "0b6d6713570af61806e1e5cb40e0f757cb93fd9d" }
async-task = { git = "https://github.com/smol-rs/async-task.git", rev = "b4486cd71e4e94fbda54ce6302444de14f4d190e" }
windows-capture = { git = "https://github.com/zed-industries/windows-capture.git", rev = "f0d6c1b6691db75461b732f6d5ff56eed002eeb9" }
calloop = { git = "https://github.com/zed-industries/calloop" }
livekit = { git = "https://github.com/zed-industries/livekit-rust-sdks", rev = "d0e27be0cdad89eadab3e36207cda0a2b6e359ee" }
libwebrtc = { git = "https://github.com/zed-industries/livekit-rust-sdks", rev = "d0e27be0cdad89eadab3e36207cda0a2b6e359ee" }
notify = { git = "https://github.com/zed-industries/notify", rev = "faecbc33db4f59313e5225ef766bfd9e54a54cfd" }
notify-types = { git = "https://github.com/zed-industries/notify", rev = "faecbc33db4f59313e5225ef766bfd9e54a54cfd" }
webrtc-sys = { git = "https://github.com/zed-industries/livekit-rust-sdks", rev = "d0e27be0cdad89eadab3e36207cda0a2b6e359ee" }

[profile.dev]
split-debuginfo = "unpacked"
incremental = true
codegen-units = 16
debug = "limited"

# mirror configuration for crates compiled for the build platform
# (without this cargo will compile ~400 crates twice)
[profile.dev.build-override]
codegen-units = 16
split-debuginfo = "unpacked"
debug = "limited"

# "debug" is a reserved profile name.
[profile.dbg]
inherits = "dev"
debug = "full"

[profile.dbg.build-override]
debug = "full"

[profile.dev.package]
# proc-macros start
gpui_macros = { opt-level = 3 }
derive_refineable = { opt-level = 3 }
feature_flags_macros = { opt-level = 3 }
settings_macros = { opt-level = 3 }
sqlez_macros = { opt-level = 3, codegen-units = 1 }
ui_macros = { opt-level = 3 }
util_macros = { opt-level = 3 }
quote = { opt-level = 3 }
syn = { opt-level = 3 }
proc-macro2 = { opt-level = 3 }
# proc-macros end

tree-sitter = { opt-level = 3 }
taffy = { opt-level = 3 }
resvg = { opt-level = 3 }
wasmtime = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
wasmtime-environ = { opt-level = 3 }
wasmtime-internal-cranelift = { opt-level = 3 }
minidumper = { opt-level = 3 }
serde_json = { opt-level = 3 }
# Build single-source-file crates with cg=1 as it helps make `cargo build` of a whole workspace a bit faster
activity_indicator = { codegen-units = 1 }
assets = { codegen-units = 1 }
breadcrumbs = { codegen-units = 1 }
collections = { codegen-units = 1 }
command_palette = { codegen-units = 1 }
command_palette_hooks = { codegen-units = 1 }
feature_flags = { codegen-units = 1 }
file_icons = { codegen-units = 1 }
image_viewer = { codegen-units = 1 }
edit_prediction_ui = { codegen-units = 1 }
install_cli = { codegen-units = 1 }
journal = { codegen-units = 1 }
json_schema_store = { codegen-units = 1 }
lmstudio = { codegen-units = 1 }
menu = { codegen-units = 1 }
notifications = { codegen-units = 1 }
ollama = { codegen-units = 1 }
outline = { codegen-units = 1 }
paths = { codegen-units = 1 }
prettier = { codegen-units = 1 }
project_symbols = { codegen-units = 1 }
refineable = { codegen-units = 1 }
release_channel = { codegen-units = 1 }
reqwest_client = { codegen-units = 1 }
session = { codegen-units = 1 }
sidebar = { codegen-units = 1 }
snippet = { codegen-units = 1 }
snippets_ui = { codegen-units = 1 }
telemetry_events = { codegen-units = 1 }
theme_selector = { codegen-units = 1 }
time_format = { codegen-units = 1 }
ui_input = { codegen-units = 1 }
zed_actions = { codegen-units = 1 }

[profile.release]
debug = "limited"
lto = "thin"
codegen-units = 1

[profile.release.package]
zed = { codegen-units = 16 }

[profile.release-fast]
inherits = "release"
debug = "full"
lto = false
codegen-units = 16

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"

declare_interior_mutable_const = "deny"

redundant_clone = "deny"
disallowed_methods = "deny"

# We currently do not restrict any style rules
# as it slows down shipping code to Zed.
#
# Running ./script/clippy can take several minutes, and so it's
# common to skip that step and let CI do it. Any unexpected failures
# (which also take minutes to discover) thus require switching back
# to an old branch, manual fixing, and re-pushing.
#
# In the future we could improve this by either making sure
# Zed can surface clippy errors in diagnostics (in addition to the
# rust-analyzer errors), or by having CI fix style nits automatically.
style = { level = "allow", priority = -1 }

# Individual rules that have violations in the codebase:
type_complexity = "allow"
let_underscore_future = "allow"

# Motivation: We use `vec![a..b]` a lot when dealing with ranges in text, so
# warning on this rule produces a lot of noise.
single_range_in_vec_init = "allow"

# in Rust it can be very tedious to reduce argument count without
# running afoul of the borrow checker.
too_many_arguments = "allow"

# We often have large enum variants yet we rarely actually bother with splitting them up.
large_enum_variant = "allow"

# Boolean expressions can be hard to read, requiring only the minimal form gets in the way
nonminimal_bool = "allow"

[workspace.metadata.cargo-machete]
ignored = [
    "bindgen",
    "cbindgen",
    "prost_build",
    "serde",
    "component",
    "documented",
    "sea-orm-macros",
]
