[package]
description = "UI components for building fantastic desktop application by using GPUI."
keywords = ["desktop", "gpui", "shadcn", "ui", "uikit"]
license = "Apache-2.0"
name = "gpui-component"
documentation = "https://docs.rs/gpui-component"
homepage = "https://longbridge.github.io/gpui-component"
repository = "https://github.com/longbridge/gpui-component"
readme = "../../README.md"
version = "0.5.2"
publish = true
edition.workspace = true

[lib]
doctest = false

[features]
decimal = ["dep:rust_decimal"]
inspector = ["gpui/inspector"]

# For syntax highlighting in Markdown and CodeEditor.
tree-sitter-languages = [
    "tree-sitter-astro",
    "tree-sitter-bash",
    "tree-sitter-c",
    "tree-sitter-cmake",
    "tree-sitter-cpp",
    "tree-sitter-csharp",
    "tree-sitter-css",
    "tree-sitter-diff",
    "tree-sitter-ejs",
    "tree-sitter-elixir",
    "tree-sitter-erb",
    "tree-sitter-go",
    "tree-sitter-graphql",
    "tree-sitter-html",
    "tree-sitter-java",
    "tree-sitter-javascript",
    "tree-sitter-jsdoc",
    "tree-sitter-kotlin",
    "tree-sitter-lua",
    "tree-sitter-make",
    "tree-sitter-markdown",
    "tree-sitter-php",
    "tree-sitter-proto",
    "tree-sitter-python",
    "tree-sitter-ruby",
    "tree-sitter-rust",
    "tree-sitter-scala",
    "tree-sitter-sql",
    "tree-sitter-svelte",
    "tree-sitter-swift",
    "tree-sitter-toml",
    "tree-sitter-tsx",
    "tree-sitter-typescript",
    "tree-sitter-yaml",
    "tree-sitter-zig",
]
tree-sitter-astro = ["dep:tree-sitter-astro-next"]
tree-sitter-bash = ["dep:tree-sitter-bash"]
tree-sitter-c = ["dep:tree-sitter-c"]
tree-sitter-cmake = ["dep:tree-sitter-cmake"]
tree-sitter-cpp = ["dep:tree-sitter-cpp"]
tree-sitter-csharp = ["dep:tree-sitter-c-sharp"]
tree-sitter-css = ["dep:tree-sitter-css"]
tree-sitter-diff = ["dep:tree-sitter-diff"]
tree-sitter-ejs = ["dep:tree-sitter-embedded-template"]
tree-sitter-elixir = ["dep:tree-sitter-elixir"]
tree-sitter-erb = ["dep:tree-sitter-embedded-template"]
tree-sitter-go = ["dep:tree-sitter-go"]
tree-sitter-graphql = ["dep:tree-sitter-graphql"]
tree-sitter-html = ["dep:tree-sitter-html"]
tree-sitter-java = ["dep:tree-sitter-java"]
tree-sitter-javascript = ["dep:tree-sitter-javascript"]
tree-sitter-jsdoc = ["dep:tree-sitter-jsdoc"]
tree-sitter-kotlin = ["dep:tree-sitter-kotlin-sg"]
tree-sitter-lua = ["dep:tree-sitter-lua"]
tree-sitter-make = ["dep:tree-sitter-make"]
tree-sitter-markdown = ["dep:tree-sitter-md"]
tree-sitter-markdown-inline = ["tree-sitter-markdown"]
tree-sitter-php = ["dep:tree-sitter-php"]
tree-sitter-proto = ["dep:tree-sitter-proto"]
tree-sitter-python = ["dep:tree-sitter-python"]
tree-sitter-ruby = ["dep:tree-sitter-ruby"]
tree-sitter-rust = ["dep:tree-sitter-rust"]
tree-sitter-scala = ["dep:tree-sitter-scala"]
tree-sitter-sql = ["dep:tree-sitter-sequel"]
tree-sitter-svelte = ["dep:tree-sitter-svelte-next"]
tree-sitter-swift = ["dep:tree-sitter-swift"]
tree-sitter-toml = ["dep:tree-sitter-toml-ng"]
tree-sitter-tsx = ["dep:tree-sitter-typescript"]
tree-sitter-typescript = ["dep:tree-sitter-typescript"]
tree-sitter-yaml = ["dep:tree-sitter-yaml"]
tree-sitter-zig = ["dep:tree-sitter-zig"]
test-support = ["gpui/test-support"]

[dependencies]
anyhow.workspace = true
gpui-component-macros = { workspace = true }
gpui-component-assets = { workspace = true }
notify = { version = "7.0.0" }
ropey = { version = "=2.0.0-beta.1", features = ["metric_lines_lf", "metric_utf16"] }
rust-i18n = { version = "4" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr = { version = "0.1" }
smallvec.workspace = true
sum-tree = { version = "0.2.0", package = "zed-sum-tree" }
tracing.workspace = true
log.workspace = true

enum-iterator = "2.1.0"
itertools = "0.13.0"
once_cell = "1.19.0"
paste = "1"
regex = { workspace = true }
unicode-segmentation = { workspace = true }
uuid = { workspace = true }

# Async primitives (cross-platform, including WASM)
async-channel = { workspace = true }
futures = { workspace = true }

# Chart
num-traits = "0.2"
rust_decimal = { version = "1.37.0", optional = true }

# Markdown Parser
markdown = { version = "1.0.0", features = ["serde"] }

# HTML Parser
html5ever = { workspace = true }
markup5ever_rcdom = { workspace = true }

# Calendar
chrono = { workspace = true }

# Code Editor
aho-corasick = { workspace = true }
lsp-types = { version = "0.97.0", features = ["proposed"] }

# Cross-platform time APIs (zero-cost on native, uses web APIs on WASM)
instant = { version = "0.1", features = ["wasm-bindgen"] }

# Native-only dependencies (not available on WASM)
gpui = { package = "gpui_facade", path = "../gpui_facade", default-features = false, features = ["gpui_macros"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
smol.workspace = true
tree-sitter = { workspace = true }
tree-sitter-astro-next = { version="0.1.1", optional = true }
tree-sitter-bash = { version = "0.23.3", optional = true }
tree-sitter-c = { workspace = true, optional = true }
tree-sitter-c-sharp = { version = "0.23.1", optional = true }
tree-sitter-cmake = { version = "0.7.1", optional = true }
tree-sitter-cpp = { version = "0.23.4", optional = true }
tree-sitter-css = { workspace = true, optional = true }
tree-sitter-diff = { workspace = true, optional = true }
tree-sitter-elixir = { workspace = true, optional = true }
tree-sitter-embedded-template = { workspace = true, optional = true }
tree-sitter-go = { version = "0.23.4", optional = true }
tree-sitter-graphql = { version = "0.1.0", optional = true }
tree-sitter-html = { workspace = true, optional = true }
tree-sitter-java = { version = "0.23.5", optional = true }
tree-sitter-javascript = { version = "0.23.1", optional = true }
tree-sitter-jsdoc = { workspace = true, optional = true }
tree-sitter-json = { workspace = true }
tree-sitter-kotlin-sg = { version = "0.4.0", optional = true }
tree-sitter-lua = { version = "0.4.1", optional = true }
tree-sitter-make = { version = "1.1.1", optional = true }
tree-sitter-md = { version = "0.5.1", optional = true }
tree-sitter-php = { version = "0.24.2", optional = true }
tree-sitter-proto = { version = "0.2.0", optional = true }
tree-sitter-python = { version = "0.23.6", optional = true }
tree-sitter-ruby = { workspace = true, optional = true }
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-scala = { version = "0.23.4", optional = true }
tree-sitter-sequel = { version = "0.3.8", optional = true }
tree-sitter-svelte-next = { version = "0.1.1", optional = true }
tree-sitter-swift = { version = "0.7.0", optional = true }
tree-sitter-toml-ng = { version = "0.7.0", optional = true }
tree-sitter-typescript = { version = "0.23.2", optional = true }
tree-sitter-yaml = { version = "0.7.1", optional = true }
tree-sitter-zig = { version = "1.1.2", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
# Native menu (NativeMenu) — drives AppKit NSMenu via objc2.
raw-window-handle = { version = "0.6.2" }
objc2 = { workspace = true }
objc2-app-kit = { version = "0.3", features = [
    "NSMenu",
    "NSMenuItem",
    "NSView",
    "NSResponder",
    "NSEvent",
    "NSImage",
] }
objc2-foundation = { version = "0.3", features = ["NSData", "NSString", "NSGeometry"] }
gpui = { package = "gpui_facade", path = "../gpui_facade", default-features = false, features = ["gpui_macos", "font-kit", "runtime_shaders"] }

[target.'cfg(target_os = "windows")'.dependencies]
# Native menu (NativeMenu) — drives Win32 popup menus.
raw-window-handle = { version = "0.6.2" }
resvg = "0.45.1"
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_GdiPlus",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Memory",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
gpui = { package = "gpui_facade", path = "../gpui_facade", default-features = false, features = ["gpui_windows", "font-kit", "runtime_shaders", "windows-manifest"] }

[dev-dependencies]
indoc = { workspace = true }
gpui = { package = "gpui_facade", path = "../gpui_facade", default-features = false, features = ["gpui_macros", "test-support"] }

[lints]
workspace = true

# `gpui-component-assets` ships the canonical icon set whose variants we
# enumerate to generate `IconName` at build time. Cargo's
# `DEP_<links>_<key>` propagation (the bridge that hands the icons-dir
# path from the assets crate's build.rs into our own) only works through
# *regular* dependencies, not build-deps, so this has to live here even
# though our use is entirely build-time.
[package.metadata.cargo-machete]
ignored = ["gpui-component-assets"]

[target.'cfg(target_family = "wasm")'.dependencies]
gpui = { package = "gpui_facade", path = "../gpui_facade", default-features = false, features = ["gpui_web"] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
gpui = { package = "gpui_facade", path = "../gpui_facade", default-features = false, features = ["gpui_linux", "x11", "wayland", "font-kit", "runtime_shaders"] }
