[package]
name = "gpui-component-assets"
description = "Default bundled assets for GPUI Component."
keywords = ["desktop", "gpui", "shadcn", "ui", "uikit"]
license = "Apache-2.0"
documentation = "https://docs.rs/gpui-component"
homepage = "https://longbridge.github.io/gpui-component"
repository = "https://github.com/longbridge/gpui-component"
readme = "README.md"
edition.workspace = true
publish = true
version = "0.5.1"

# `links` is the documented cargo mechanism for sharing build-time metadata
# across the dep graph: every dependent (regular OR build-dep) receives the
# `cargo:KEY=VALUE` lines from our build.rs as `DEP_<links>_<KEY>` env vars
# in its own build script. We use this to publish the absolute path of our
# `assets/icons` directory so `gpui-component` can generate its `IconName`
# enum at proc-macro expansion time without a sibling-crate reference
# (which would break under `cargo vendor` / `cargo publish`). The value is
# conventionally a native-library name; we use a unique identifier scoped
# to this crate's purpose. Cargo enforces uniqueness across the build
# graph, which also prevents accidental double-linkage in dependents.
links = "gpui-component-default-icons"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
log.workspace = true
gpui = { package = "gpui_facade", path = "../gpui_facade", default-features = false, features = ["gpui_macros"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rust-embed = { workspace = true, features = ["interpolate-folder-path"] }

[target.'cfg(target_family = "wasm")'.dependencies]
reqwest = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
gpui = { package = "gpui_facade", path = "../gpui_facade", default-features = false, features = ["gpui_web"] }

[target.'cfg(target_os = "macos")'.dependencies]
gpui = { package = "gpui_facade", path = "../gpui_facade", default-features = false, features = ["gpui_macos", "font-kit", "runtime_shaders"] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
gpui = { package = "gpui_facade", path = "../gpui_facade", default-features = false, features = ["gpui_linux", "x11", "wayland", "font-kit", "runtime_shaders"] }

[target.'cfg(target_os = "windows")'.dependencies]
gpui = { package = "gpui_facade", path = "../gpui_facade", default-features = false, features = ["gpui_windows", "font-kit", "runtime_shaders", "windows-manifest"] }

[features]
test-support = ["gpui/test-support"]

[dev-dependencies]
gpui = { package = "gpui_facade", path = "../gpui_facade", default-features = false, features = ["gpui_macros", "test-support"] }
