[package]
name = "gpui-component-macros"
description = "Macros for GPUI Component."
version = "0.5.1"
license = "Apache-2.0"
publish = true
edition.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["proc-macro2", "core-text"]
