[package]
name = "gpui-component-story"
version = "0.5.1"
publish = false
edition.workspace = true

[features]
inspector = ["gpui-component/inspector"]
tree-sitter = ["gpui-component/tree-sitter-languages"]
default = ["tree-sitter"]
test-support = ["gpui/test-support"]

[dependencies]
anyhow.workspace = true
gpui-component = { workspace = true }
gpui-component-assets.workspace = true

autocorrect = "2.14.2"
chrono = { workspace = true }
csv = "1.4"
fake = { version = "2.10.0", features = ["dummy"] }
itertools = { workspace = true }
lsp-types = { version = "0.97.0", features = ["proposed"] }
rand = "0.8"
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing.workspace = true
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "registry"], default-features = false }
unindent = { workspace = true }
rust-i18n = { version = "4" }
dirs = { workspace = true }

# Native-only dependencies (not available on WASM)
gpui = { package = "gpui_facade", path = "../gpui_facade", default-features = false, features = ["gpui_macros"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest_client = { path = "../reqwest_client" }
smol.workspace = true
tree-sitter-navi = "0.2.3"
color-lsp = "0.2.0"

[target.'cfg(target_family = "wasm")'.dependencies]
gpui = { package = "gpui_facade", path = "../gpui_facade", default-features = false, features = ["gpui_web"] }

[target.'cfg(target_os = "linux")'.dependencies]

[lints]
workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
gpui = { package = "gpui_facade", path = "../gpui_facade", default-features = false, features = ["gpui_macos", "font-kit", "runtime_shaders"] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
gpui = { package = "gpui_facade", path = "../gpui_facade", default-features = false, features = ["gpui_linux", "x11", "wayland", "font-kit", "runtime_shaders"] }

[target.'cfg(target_os = "windows")'.dependencies]
gpui = { package = "gpui_facade", path = "../gpui_facade", default-features = false, features = ["gpui_windows", "font-kit", "runtime_shaders", "windows-manifest"] }

[dev-dependencies]
gpui = { package = "gpui_facade", path = "../gpui_facade", default-features = false, features = ["gpui_macros", "test-support"] }
