[package]
name = "gpui_facade"
version = "0.2.2"
edition.workspace = true
authors = ["Nathan Sobo <nathan@zed.dev>"]
description = "Zed's GPU-accelerated UI framework"
repository = "https://github.com/zed-industries/zed"
publish = false
license = "Apache-2.0"
homepage = "https://gpui.rs"
readme = "README.md"
keywords = ["desktop", "gui", "immediate"]
categories = ["gui"]

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[features]
default = [
    "gpui/default",
    "font-kit",
    "wayland",
    "x11",
    "windows-manifest",
]
test-support = [
    "gpui/test-support",
    "gpui_platform/test-support",
    "gpui_macos?/test-support",
    "gpui_linux?/test-support",
    "gpui_windows?/test-support",
]
bench = ["gpui/bench"]
inspector = [
    "gpui/inspector",
    "gpui_macros/inspector",
]
leak-detection = ["gpui/leak-detection"]
wayland = [
    "gpui/wayland",
    "gpui_platform/wayland",
    "gpui_linux?/wayland",
]
x11 = [
    "gpui/x11",
    "gpui_platform/x11",
    "gpui_linux?/x11",
]
screen-capture = [
    "gpui/screen-capture",
    "gpui_platform/screen-capture",
    "gpui_macos?/screen-capture",
    "gpui_linux?/screen-capture",
    "gpui_windows?/screen-capture",
]
windows-manifest = ["gpui/windows-manifest"]
input-latency-histogram = ["gpui/input-latency-histogram"]
profiler = ["gpui/profiler"]
font-kit = [
    "gpui/font-kit",
    "gpui_platform/font-kit",
    "gpui_macos?/font-kit",
]
runtime_shaders = [
    "gpui_platform/runtime_shaders",
    "gpui_macos?/runtime_shaders",
]
gpui_macros = ["dep:gpui_macros"]
gpui_web = ["dep:gpui_web"]
gpui_web_multithreaded = [
    "gpui_web",
    "gpui_web/multithreaded",
]
gpui_macos = ["dep:gpui_macos"]
gpui_linux = ["dep:gpui_linux"]
gpui_windows = ["dep:gpui_windows"]
backtrace = ["gpui/backtrace"]
bitflags = ["gpui/bitflags"]
proptest = ["gpui/proptest"]
objc2 = ["gpui/objc2"]
objc2-metal = ["gpui/objc2-metal"]
scap = ["gpui/scap"]
[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
gpui_macros = { workspace = true, optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
gpui_web = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
gpui_macos = { workspace = true, optional = true }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
gpui_linux = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
gpui_windows = { workspace = true, optional = true }
